1. Реализация кеша на SoftReference