@@ -1,17 +1,21 @@
 package ru.job4j.cache;
 
 import java.io.*;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 
 public class DirFileCache extends AbstractCache<String, String> {
 
 
-    private final String cachingDir;
+    private String cachingDir;
 
     public DirFileCache(String cachingDir) {
         this.cachingDir = cachingDir;
-        load(cachingDir);
+    }
+
+    public void setCachingDir(String cachingDir) {
+        this.cachingDir = cachingDir;
     }
 
     public String getCachingDir() {
@@ -19,15 +23,13 @@ public class DirFileCache extends AbstractCache<String, String> {
     }
 
     @Override
-    protected String load(String key) {
-        Path path = Paths.get(key);
-            try (BufferedReader reader = new BufferedReader(new FileReader(key))) {
-                String file = reader.readLine();
-                put(path.getFileName().toString(), file);
-            } catch (IOException e) {
-                e.printStackTrace();
-            }
-        return get(path.getFileName().toString());
+    public String load(String key) {
+        String textFromFile = null;
+        try {
+            textFromFile = Files.readString(Path.of(cachingDir));
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    return textFromFile;
     }
-
 }
